--- a/_publications/2025TCCN.md
+++ b/_publications/2025TCCN.md
@@ -1,7 +1,7 @@
 ---
 title: ""
 collection: publications
-date: 2025
+date: Oct. 2025
 venue: 'Transactions on Cognitive Communications and Networking'
 link: 'https://ieeexplore.ieee.org/abstract/document/10915550'
 citation: 'B. Gu, D. Li, H. Xie, K. Yu, Q. Guan and Y. Xu, "Exploring Hybrid Active and Passive Multiple Access via Slotted ALOHA-Driven Backscatter Communications," in IEEE Transactions on Cognitive Communications and Networking, vol. 11, no. 5, pp. 3317-3332, Oct. 2025, doi: 10.1109/TCCN.2025.3548633.' 
