--- a/_publications/2024TWCA.md
+++ b/_publications/2024TWCA.md
@@ -1,7 +1,7 @@
 ---
 title: "2024"
 collection: publications
-date: 2023-10-01
+date: Sept. 2024
 venue: 'IEEE Transactions on Wireless Communications'
 link: 'https://ieeexplore.ieee.org/abstract/document/10486847'
 citation: 'H. Xie, D. Li and B. Gu, "Exploring Hybrid Active-Passive RIS-Aided MEC Systems: From the Mode-Switching Perspective," in IEEE Transactions on Wireless Communications, vol. 23, no. 9, pp. 11291-11308, Sept. 2024'
