--- a/_publications/2024TWC.md
+++ b/_publications/2024TWC.md
@@ -1,7 +1,7 @@
 ---
 title: ""
 collection: publications
-date: 2024-07-03
+date: Oct. 2024
 venue: 'IEEE Transactions on Wireless Communications'
 link: 'https://ieeexplore.ieee.org/abstract/document/10915550'
 citation: 'H. Xie, D. Li and B. Gu, "Enhancing Spectrum Sensing via Reconfigurable Intelligent Surfaces: Passive or Active Sensing and How Many Reflecting Elements Are Needed?" in IEEE Transactions on Wireless Communications, vol. 23, no. 10, pp. 14940-14955, Oct. 2024, doi: 10.1109/TWC.2024.3422026.'
