--- a/_publications/2025TCCN.md
+++ b/_publications/2025TCCN.md
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "2025"
 collection: publications
 date: Oct. 2025
 venue: 'Transactions on Cognitive Communications and Networking'
