--- a/_publications/2023IOTJ.md
+++ b/_publications/2023IOTJ.md
@@ -1,1 +1,9 @@
 
+---
+title: ""
+collection: publications
+date: Aug. 2023
+venue: 'IEEE Internet of Things Journal.'
+link: 'https://ieeexplore.ieee.org/abstract/document/10083178'
+citation: 'H. Xie, B. Gu, D. Li, Z. Lin and Y. Xu, "Gain Without Pain: Recycling Reflected Energy From Wireless-Powered RIS-Aided Communications," in IEEE Internet of Things Journal, vol. 10, no. 15, pp. 13264-13280, Aug. 2023, doi: 10.1109/JIOT.2023.3262517.'
+---
