--- a/_publications/2023TVT.md
+++ b/_publications/2023TVT.md
@@ -1,1 +1,8 @@
-
+---
+title: ""
+collection: publications
+date: Jan. 2023
+venue: 'IEEE Transactions on Vehicular Technology.'
+link: 'https://ieeexplore.ieee.org/abstract/document/9888066'
+citation: 'B. Gu, D. Li, Y. Xu, C. Li and S. Sun, "Many a Little Makes a Mickle: Probing Backscattering Energy Recycling for Backscatter Communications," in IEEE Transactions on Vehicular Technology, vol. 72, no. 1, pp. 1343-1348, Jan. 2023, doi: 10.1109/TVT.2022.3205888.'
+---
