--- a/_publications/2021TVT.md
+++ b/_publications/2021TVT.md
@@ -1,1 +1,8 @@
-
+---
+title: ""
+collection: publications
+date: June 2021
+venue: 'IEEE Transactions on Vehicular Technology.'
+link: 'https://ieeexplore.ieee.org/abstract/document/9422161'
+citation: 'Y. Xu, B. Gu, R. Q. Hu, D. Li and H. Zhang, "Joint Computation Offloading and Radio Resource Allocation in MEC-Based Wireless-Powered Backscatter Communication Networks," in IEEE Transactions on Vehicular Technology, vol. 70, no. 6, pp. 6200-6205, June 2021, doi: 10.1109/TVT.2021.3077094.'
+---
