--- a/_publications/2021CL.md
+++ b/_publications/2021CL.md
@@ -1,1 +1,8 @@
-
+---
+title: "2021"
+collection: publications
+date: Oct. 2021
+venue: 'IEEE Communications Letters.'
+link: 'https://ieeexplore.ieee.org/abstract/document/9488667'
+citation: 'Y. Xu, B. Gu and D. Li, "Robust Energy-Efficient Optimization for Secure Wireless-Powered Backscatter Communications With a Non-Linear EH Model," in IEEE Communications Letters, vol. 25, no. 10, pp. 3209-3213, Oct. 2021, doi: 10.1109/LCOMM.2021.3097737.'
+---
